# ldm-from-scratch

./: .gitignore  dataset.py  pyproject.toml  trainer.py
checkpoints/vae_smoketest/epoch_1/: random_states_0.pkl
configs/: vae_config.yaml
diffusion/: ddim.py  diffusion_loss.py  forward_process.py  losses.py  scheduler.py  trainer.py
ldm_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
models/: attention_block.py  class_attention_block.py  decoder.py  embeddings.py  encoder.py  latent_unet.py  latent_unet_block.py  resblock.py  vae.py
nn/: attention.py  conv.py  dropout.py  linear.py  normalization.py  sequential.py
tests/: test_attention_block.py  test_cfg_ddim.py  test_class_attention_block.py  test_conditional_latent_dataset.py  test_conditional_latent_unet.py  test_dataset.py  test_dataset_pipeline.py  test_ddim.py  test_decoder.py  test_diffusion_loss.py  test_embeddings.py  test_encoder.py  test_forward_process.py  test_latent_dataset.py  test_latent_unet.py  test_latent_unet_block.py  test_resblock.py  test_time_resblock.py  test_vae.py  vaelosse.py
utils/: config.py  logging.py  transformer.py
